@@ -1,6 +1,7 @@
 # Changelog for RDF-aREF
 
 {{$NEXT}}
+  - encode literal with datatype xsd:string as plain literal (#19)
 
 0.25  2015-03-03 12:33:40 CET
   - support aref_query on property maps
